--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     container_name: zipkin-cassandra-server
     ports:
       - "9042:9042"
-    restart: always
+    restart: unless-stopped
     networks:
       - zipkin-network
     volumes:
@@ -34,7 +34,7 @@ services:
     ports:
       - "15672:15672"
       - "5672:5672"
-    restart: always
+    restart: unless-stopped
     networks:
       - zipkin-network
     volumes:
@@ -58,7 +58,7 @@ services:
     container_name: zipkin-web-server
     ports:
       - "9411:9411"
-    restart: always
+    restart: unless-stopped
     networks:
       - zipkin-network
     depends_on: 
